<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
<!--        android:fitsSystemWindows="true">-->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/top_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/meal4"
                android:contentDescription="@string/meal_img"
                app:layout_collapseMode="parallax"/>
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarStyle1"
                app:title="Title Test"
                app:titleTextColor="@android:color/white"
                app:layout_collapseMode="pin"/>
<!--                app:title="Title Test5"-->
<!--                app:titleTextColor="@android:color/white"-->
<!--     style="@style/Widget.MaterialComponents.Toolbar.Primary"       app:layout_scrollFlags="scroll|enterAlways"/>-->
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nestedScrollView_textView"
                android:textAlignment="center"
                android:textSize="20sp" />
            <RadioGroup
                android:id="@+id/pizza_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_diavolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_pizza_type_diavolo"/>
                <RadioButton
                    android:id="@+id/radio_funghi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_pizza_type_funghi"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_extras"/>
            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.chip.Chip
                    android:id="@+id/parmesan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exteras_parmesan"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chili_oil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exteras_chili_oil"
                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:layout_anchor="@id/top_image"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/fab_img_descrition"
        android:src="@android:drawable/ic_menu_send"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
